# snAIke

./: CLAUDE.md  PLAN.md  README.md  devlog.md  pyproject.toml
src/snaike/: food.py  game.py  main.py  snake.py
tests/: test_food.py  test_game.py  test_renderer.py  test_snake.py
