[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snaike"
version = "0.1.0"
description = "An AI-generated snake game in Python"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6",
]

[project.scripts]
snaike = "snaike.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/snaike"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
